--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
-
+        <li>
+          <%= link_to "About", about_path %>
+        </li>
         <li>
           <%= link_to "Sign up", new_user_registration_path %>
         </li>
