--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,3 +7,27 @@
   <%= f.submit 'Create Book' %>
 <% end %>
 
+<div>
+<h4>Books</h4>
+<% @books.each do |book| %>
+
+  <table>
+    <tr>
+      <th colspan="1"></th>
+      <th colspan="2">Title</th>
+      <th colspan="3">Opinion</th>
+    </tr>
+  
+      <% @books.each do |book| %>
+      <tr>
+        <td colspan="1"><%= image_tag 'no_image.jpg' %></td>
+        <td colspan="2"><%= link_to book.title,book_path(book.id) %></td>
+        <td colspan="3"><%= book.body %></td>
+  
+      </tr>
+      <% end %>
+  
+  </table>
+<% end %>
+</div>
+
