--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,18 @@
+<h1>User info</h1>
+<% if user_signed_in? %>
+  <%= image_tag current_user.get_profile_image(100, 100) %>
+<table>
+  <tr>
+    <th>name</th>
+    <th><%= current_user.name %></th>
+  </tr>
+    <th>introduction</th>
+    <th><%= current_user.introduction %></th>
+</table>
+<% end %>
+<%= link_to "編集", edit_user_path(current_user.id) %>
 <h1>New book</h1>
-<%= form_with model: @book,url: '/books', method: :post do |f| %>
+<%= form_with model: @booknew,url: '/books', method: :post do |f| %>
   <h4>Title</h4>
     <%= f.text_field :title %>
   <h4>Opinion</h4>
@@ -7,7 +20,9 @@
   <%= f.submit 'Create Book' %>
 <% end %>
 
+
 <div>
+
 <h4>Books</h4>
 
   <table>
@@ -16,16 +31,16 @@
       <th colspan="2">Title</th>
       <th colspan="3">Opinion</th>
     </tr>
-  
+
       <% @books.each do |book| %>
       <tr>
-        <td colspan="1"><%= image_tag 'no_image.jpg' %></td>
+        <td colspan="1"><%= image_tag book.user.get_profile_image(80, 80) %></td>
         <td colspan="2"><%= link_to book.title,book_path(book.id) %></td>
         <td colspan="3"><%= book.body %></td>
-  
+
       </tr>
       <% end %>
-  
+
   </table>
 </div>
 
