--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,20 +1,31 @@
 <h1>User info</h1>
-  <%= image_tag 'no_image.jpg' %>
-  <table>
-    <tr>
-      <th>name</th>
-      <th>introduction</th>
-      <td>a</td>
-      <td>b</td>
-    </tr>
-  </table>
+
+  <%= image_tag @book.user.get_profile_image(100, 100) %>
+<table>
+  <tr>
+    <th>name</th>
+    <th><%= @book.user.name %></th>
+  </tr>
+    <th>introduction</th>
+    <th><%= @book.user.introduction %></th>
+    </table>
+  <%= link_to "編集", edit_user_path(current_user.id) %>
 <h1>New book</h1>
+<%= form_with model: @booknew,url: '/books', method: :post do |f| %>
+  <h4>Title</h4>
+    <%= f.text_field :title %>
+  <h4>Opinion</h4>
+    <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
+<% end %>
 
 <h1>Book detail</h1>
 <table>
   <td>
-    <%= image_tag 'no_image.jpg' %><br>
-    <%= @book.user.name %>
+    <%= image_tag @book.user.get_profile_image(80, 80) %><br>
+    <%= link_to user_path(@book.user.id) do %>
+      <%= @book.user.name %>
+    <% end %>
   </td>
   <td>
     <%= link_to book_path(@book.id) do %>
