--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,6 @@
 <h1>Homes#top</h1>
+<p>in<span>Bookers,</span></p>
 <p>you can share and exchange your opinions , inpressions , and emotionsabout various books!</p>
+
+<%= link_to "Log in", new_user_session_path %>
+<%= link_to "Sign up", new_user_registration_path %>
