--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,28 @@
 <h1>User info</h1>
-<% if user_signed_in? %>
-  <%= image_tag current_user.get_profile_image(100, 100) %>
+<%= image_tag @user.get_profile_image(100,100) %>
 <table>
   <tr>
     <th>name</th>
-    <th><%= current_user.name %></th>
+    <th><%= @user.name %></th>
   </tr>
+  <tr>
     <th>introduction</th>
-    <th><%= current_user.introduction %></th>
+    <th><%= @user.introduction %></th>
+  </tr>
 </table>
-<% end %>
+
+<%= link_to "編集", edit_user_path(current_user.id) %>
 
 <h1>New book</h1>
+<%= form_with model: @booknew, url: books_path, method: :post do |f| %>
+  <h4>Title</h4>
+    <%= f.text_field :title %>
+  <h4>Opinion</h4>
+    <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
+<% end %>
+
+
 
 <h1>Users</h1>
 <table>
