--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,25 @@
 <h1>User info</h1>
-  <div>
-  <h3><%= @user.name %></h3>
+  
   <%= image_tag @user.get_profile_image(100,100) %>
-</div>
+<table>
+  <tr>
+    <th>name</th>
+    <th><%= @user.name %></th>
+  </tr>
+  <tr>
+    <th>introduction</th>
+    <th><%= @user.introduction %></th>
+  </tr>
+</table>
+<%= link_to "編集", edit_user_path(current_user.id) %>
+<h1>New book</h1>
+<%= form_with model: @booknew,url: '/books', method: :post do |f| %>
+  <h4>Title</h4>
+    <%= f.text_field :title %>
+  <h4>Opinion</h4>
+    <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
+<% end %>
 
 <!-- ユーザーの投稿一覧 -->
 <table>
