--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1>User info</h1>
-  
+
   <%= image_tag @user.get_profile_image(100,100) %>
 <table>
   <tr>
@@ -34,11 +34,19 @@
     <td>
       <%= link_to book_path(book.id) do %>
         <%= book.title %>
-      
+
       <% end %>
     </td>
     <td><%= book.body %></td>
-    
+      <% if @user == current_user %>
+  <td>
+    <%= link_to "Destroy", book_path(@user.id), method: :delete, "data-confirm" => "本当に消しますか?" %>
+  </td>
+  <td>
+    <%= link_to "Edit", edit_book_path(@user.id) %>
+  </td>
+  <% end %>
+
   </tr>
 </table>
 <% end %>
