--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,15 +9,9 @@
     <th>introduction</th>
     <th><%= @book.user.introduction %></th>
     </table>
-  <%= link_to "編集", edit_user_path(current_user.id) %>
-<h1>New book</h1>
-<%= form_with model: @booknew,url: '/books', method: :post do |f| %>
-  <h4>Title</h4>
-    <%= f.text_field :title %>
-  <h4>Opinion</h4>
-    <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
+  
+
+<%= render 'newbook', booknew: @booknew %>
 
 <h1>Book detail</h1>
 <table>
