--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,16 +11,9 @@
   </tr>
 </table>
 
-<%= link_to "編集", edit_user_path(current_user.id) %>
 
-<h1>New book</h1>
-<%= form_with model: @booknew, url: books_path, method: :post do |f| %>
-  <h4>Title</h4>
-    <%= f.text_field :title %>
-  <h4>Opinion</h4>
-    <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
+
+<%= render 'books/newbook', booknew: @booknew %>
 
 
 
