--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,9 @@
     <th><%= @user.introduction %></th>
   </tr>
 </table>
-<%= link_to "編集", edit_user_path(current_user.id) %>
-<h1>New book</h1>
-<%= form_with model: @booknew,url: '/books', method: :post do |f| %>
-  <h4>Title</h4>
-    <%= f.text_field :title %>
-  <h4>Opinion</h4>
-    <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
+
+
+<%= render 'books/newbook', booknew: @booknew %>
 
 <!-- ユーザーの投稿一覧 -->
 <table>
