--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,22 @@
-
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <h1>Editing book</h1>
 <%= form_with model: @book,url: book_path(@book.id),method: :patch do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
-  
+
   <h4>opinion</h4>
   <%= f.text_area :body %>
-  
+
   <%= f.submit'保存' %>
-  
+
 <% end %>
 
 <div class=link>
