--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <h1>Editing book</h1>
-<%= form_with model: @book,url: book_path(@book.id),method: :patch do |f| %>
+<%= form_with model: @book, method: :patch do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 
