--- a/app/views/books/_newbook.html.erb
+++ b/app/views/books/_newbook.html.erb
@@ -1,10 +1,16 @@
-<%= link_to "編集", edit_user_path(current_user.id) %>
-
+<div class="d-grid gap-2 col-10">
+  <%= link_to edit_user_path(current_user.id), class: 'btn btn-outline-secondary' do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+</div>
 <h1>New book</h1>
 <%= form_with model: booknew,url: books_path, method: :post do |f| %>
   <h4>Title</h4>
     <%= f.text_field :title %>
+
   <h4>Opinion</h4>
     <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
+
+  <div><%= f.submit 'Create Book', class:'btn btn-success' %></div>
+
 <% end %>
