--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,21 +6,23 @@
     <% end %>
   </ul>
 <% end %>
+<div class="col pb-2 d-grid gap-2 col-6 mx-auto">
+  <h1>Editing book</h1>
+  <%= form_with model: @book, method: :patch do |f| %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
 
-<h1>Editing book</h1>
-<%= form_with model: @book, method: :patch do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+    <h4>opinion</h4>
+    <%= f.text_area :body %><br>
 
-  <h4>opinion</h4>
-  <%= f.text_area :body %>
 
-  <%= f.submit'保存' %>
+    <span><%= f.submit'Update Book',class:'btn btn-success' %></span>
 
-<% end %>
+  <% end %>
 
-<div class=link>
-  <%= link_to "Show", book_path(@book.id) %>
-  <span>|</span>
-  <%= link_to "Back", books_path %>
+  <div class=link>
+    <%= link_to "Show", book_path(@book.id) %>
+    <span>|</span>
+    <%= link_to "Back", books_path %>
+  </div>
 </div>
