--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
 
 <h1>User info</h1>
   <%= image_tag current_user.get_profile_image(100, 100) %>
-<table>
+<table class="table">
   <tr>
     <th>name</th>
     <th><%= current_user.name %></th>
@@ -25,7 +25,7 @@
 
 <h4>Books</h4>
 
-  <table>
+  <table class="table">
     <tr>
       <th colspan="1"></th>
       <th colspan="2">Title</th>
