--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,49 +11,76 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm">
-      <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <%= link_to "Bookers", root_path, class: "navbar-brand" %>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end">
+              <ul class = "nav navbar-nav">
+              <% if user_signed_in? %>
 
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", user_path(current_user) %>
-        </li>
-
-        <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Home", root_path %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "Log in", new_user_session_path %>
-        </li>
-      <% end %>
+                  <li class="nav-item active">
+                    <%= link_to user_path(current_user), class: "nav-link" do %>
+                      <i class="fas fa-home"></i>Home
+                    <% end %>
+                  </li>
+                  <li class="nav-item active">
+                    <%= link_to users_path, class: "nav-link" do %>
+                      <i class="fas fa-users"></i>Users
+                    <% end %>
+                  </li>
+                  <li class="nav-item active">
+                    <%= link_to books_path, class: "nav-link" do %>
+                      <i class="fas fa-book-open"></i>Books
+                    <% end %>
+                  </li>
+                  <li class="nav-item active">
+                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
+                    <i class="fas fa-sign-out-alt"></i>Log out
+                  <% end %>
+                  </li>
+                <% else %>
+                  <li class="nav-item active">
+                    <%= link_to root_path, class: "nav-link" do %>
+                      <i class="fas fa-home"></i>Home
+                    <% end %>
+                  </li>
+                  <li class="nav-item active">
+                    <%= link_to about_path, class: "nav-link" do %>
+                      <i class="fas fa-link"></i>About
+                    <% end %>
+                  </li>
+                  <li class="nav-item active">
+                    <%= link_to new_user_registration_path, class: "nav-link" do %>
+                      <i class="fas fa-user-plus"></i>Sign up
+                    <% end %>
+                  </li>
+                  <li class="nav-item active">
+                    <%= link_to new_user_session_path, class: "nav-link" do %>
+                      <i class="fas fa-sign-in-alt"></i>Log in
+                    <% end %>
+                  </li>
+                </ul>
+              <% end %>
+        </div>
+      </nav>
     </header>
 
     <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
 
-    <%= yield %>
-    <footer>
-      <p>CopyRight Infratop.inc</p>
+    <div class="container pt-2 pb-5">
+      <%= yield %>
+    </div>
+    <footer class="row">
+      <div class="mx-auto">
+        <p>CopyRight Infratop.inc</p>
+      </div>
     </footer>
   </body>
 </html>
