--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,17 +6,19 @@
     <% end %>
   </ul>
 <% end %>
-<h1>User info</h1>
-<%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
-  <h4>Name</h4>
-  <%= f.text_field :name %>
+<div class="col pb-2 d-grid gap-2 col-6 mx-auto">
+  <h1>User info</h1>
+  <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+    <h4>Name</h4>
+    <%= f.text_field :name %>
 
-  <h4>Image</h4>
-  <%= f.file_field :profile_image,accept: "image/*" %>
+    <h4>Image</h4>
+    <%= f.file_field :profile_image,accept: "image/*" %>
 
-  <h4>Introduction</h4>
-  <%= f.text_area :introduction %>
+    <h4>Introduction</h4>
+    <%= f.text_area :introduction %>
 
-  <%= f.submit 'Update User' %>
+    <div><%= f.submit 'Update User', class: 'btn btn-secondary' %></div>
 
-<% end %>
+  <% end %>
+</div>
