--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,40 +1,43 @@
 <div>
   <%= flash[:success] %>
 </div>
-<h1>User info</h1>
-<%= image_tag @user.get_profile_image(100,100) %>
-<table>
-  <tr>
-    <th>name</th>
-    <th><%= @user.name %></th>
-  </tr>
-  <tr>
-    <th>introduction</th>
-    <th><%= @user.introduction %></th>
-  </tr>
-</table>
 
+  <div class="row mx-lg-n5">
+    <div class="col col-lg-3">
+      <h1>User info</h1>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+      </table>
 
+      <%= render 'books/newbook', booknew: @booknew %>
+      </div>
+    </div>
 
-<%= render 'books/newbook', booknew: @booknew %>
+    <div class="col col-lg-8">
+      <h1>Users</h1>
+      <table class="table">
+        <tr>
+        <th>image</th>
+        <th>name</th>
+        <th></th>
+        </tr>
 
+        <% @users.each do |user| %>
+        <tr>
+          <td><%= image_tag user.get_profile_image(80, 80) %></td>
+          <td><%= user.name %></td>
+          <td><%= user.introduction %></td>
+          <td><%= link_to 'Show', user_path(user.id) %></td>
+        </tr>
+        <% end %>
+      </div>
 
-
-<h1>Users</h1>
-<table>
-  <tr>
-  <th>image</th>
-  <th>name</th>
-  <th></th>
-  </tr>
-
-  <% @users.each do |user| %>
-  <tr>
-    <td><%= image_tag user.get_profile_image(80, 80) %></td>
-    <td><%= user.name %></td>
-    <td><%= user.introduction %></td>
-    <td><%= link_to 'Show', user_path(user.id) %></td>
-  </tr>
-  <% end %>
-
-</table>
+  </table>
