--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,7 @@
 <div>
   <%= flash[:success] %>
 </div>
-
-  <div class="row mx-lg-n5">
+<div class="row">
     <div class="col col-lg-3">
       <h1>User info</h1>
       <%= image_tag @user.get_profile_image(100,100) %>
@@ -18,7 +17,7 @@
       </table>
 
       <%= render 'books/newbook', booknew: @booknew %>
-      </div>
+      
     </div>
 
     <div class="col col-lg-8">
@@ -38,6 +37,7 @@
           <td><%= link_to 'Show', user_path(user.id) %></td>
         </tr>
         <% end %>
-      </div>
+    </div>
 
   </table>
+</div>
