--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,46 +1,48 @@
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<div class="row">
+  <div class="col col-lg-3">
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %>件のエラーが発生しました
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
-<% end %>
 
-<h1>User info</h1>
-  <%= image_tag current_user.get_profile_image(100, 100) %>
-<table class="table">
-  <tr>
-    <th>name</th>
-    <th><%= current_user.name %></th>
-  </tr>
-    <th>introduction</th>
-    <th><%= current_user.introduction %></th>
-</table>
-
-
-<%= render 'newbook', booknew: @booknew %>
-
-<div>
-
-<h4>Books</h4>
-
-  <table class="table">
-    <tr>
-      <th colspan="1"></th>
-      <th colspan="2">Title</th>
-      <th colspan="3">Opinion</th>
-    </tr>
-
-      <% @books.each do |book| %>
+    <h1>User info</h1>
+      <%= image_tag current_user.get_profile_image(100, 100) %>
+    <table class="table">
       <tr>
-        <td colspan="1"><%= image_tag book.user.get_profile_image(80, 80) %></td>
-        <td colspan="2"><%= link_to book.title,book_path(book.id) %></td>
-        <td colspan="3"><%= book.body %></td>
-
+        <th>name</th>
+        <th><%= current_user.name %></th>
       </tr>
-      <% end %>
+        <th>introduction</th>
+        <th><%= current_user.introduction %></th>
+    </table>
 
-  </table>
+
+    <%= render 'newbook', booknew: @booknew %>
+  </div>
+  <div class="col-lg-8">
+
+    <h4>Books</h4>
+
+      <table class="table">
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </tr>
+
+          <% @books.each do |book| %>
+          <tr>
+            <td><%= image_tag book.user.get_profile_image(80, 80) %></td>
+            <td><%= link_to book.title,book_path(book.id) %></td>
+            <td><%= book.body %></td>
+
+          </tr>
+          <% end %>
+
+      </table>
+    </div>
 </div>
-
