--- a/app/views/books/_newbook.html.erb
+++ b/app/views/books/_newbook.html.erb
@@ -1,4 +1,4 @@
-<div class="d-grid gap-2 col-10">
+<div class="col pb-2 d-grid gap-2 col-6 mx-auto">
   <%= link_to edit_user_path(current_user.id), class: 'btn btn-outline-secondary' do %>
     <i class="fas fa-user-cog"></i>
   <% end %>
