--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
+  <div class="col col-lg-3">
   <h1>User info</h1>
-  <div class="col col-lg-3"
+
     <%= image_tag @user.get_profile_image(100,100) %>
     <table class="table">
       <tr>
