--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,14 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+<% end %>
 <div class="row">
-  <div class="col col-lg-3">
-    <% if @book.errors.any? %>
-      <%= @book.errors.count %>件のエラーが発生しました
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    <% end %>
+  <div class="col col-md-3">
+
 
     <h1>User info</h1>
       <%= image_tag current_user.get_profile_image(100, 100) %>
@@ -20,10 +21,16 @@
         <th><%= current_user.introduction %></th>
     </table>
 
+    <div class="col pb-2 d-grid gap-2 col-6 mx-auto">
+      <%= link_to edit_user_path(current_user.id), class: 'btn btn-outline-secondary' do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
+    </div>
+
 
     <%= render 'newbook', booknew: @booknew %>
   </div>
-  <div class="col-lg-8">
+  <div class="col-md-8 offset-md-1">
 
     <h4>Books</h4>
 
@@ -36,9 +43,13 @@
 
           <% @books.each do |book| %>
           <tr>
-            <td><%= image_tag book.user.get_profile_image(80, 80) %></td>
-            <td><%= link_to book.title,book_path(book.id) %></td>
-            <td><%= book.body %></td>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                  <% image_tag book.user.get_profile_image(80, 80) %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title,book_path(book.id) %></td>
+              <td><%= book.body %></td>
 
           </tr>
           <% end %>
