--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col col-lg-3">
+  <div class="col col-md-3">
     <h1>User info</h1>
 
       <%= image_tag @book.user.get_profile_image(100, 100) %>
@@ -12,10 +12,17 @@
         <th><%= @book.user.introduction %></th>
         </table>
 
+        <div class="col pb-2 d-grid gap-2 col-6 mx-auto">
+          
+            <%= link_to edit_user_path(@book.user.id), class: 'btn btn-outline-secondary' do %>
+              <i class="fas fa-user-cog"></i>
+            <% end %>
+        </div>
+
     <%= render 'newbook', booknew: @booknew %>
   </div>
 
-  <div class="col col-lg-8">
+  <div class="col col-md-8 offset-md-1">
     <h1>Book detail</h1>
     <table class="table">
       <td>
@@ -35,7 +42,7 @@
 
       <% if @book.user == current_user %>
         <td>
-        <%= link_to "Edit", edit_book_path(@book), class:"btn btn-success" %>
+        <%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %>
       </td>
       <td>
         <%= link_to "Destroy", @book, method: :delete, "data-confirm" => "本当に消しますか?", class: 'btn btn-danger' %>
