--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to Bookers!</h1>
+<div class="row">
+  <h1 class="mx-auto">Welcome to <span class="font-weight-bold"><i class="fas fa-book"></i>Bookers !!</span>
+</div>
