--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col col-lg-3">
+  <div class="col col-md-3">
   <h1>User info</h1>
 
     <%= image_tag @user.get_profile_image(100,100) %>
@@ -14,10 +14,17 @@
       </tr>
     </table>
 
+    <div class="col pb-2 d-grid gap-2 col-6 mx-auto">
+    
+        <%= link_to edit_user_path(@user.id), class: 'btn btn-outline-secondary' do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
+    </div>
+
     <%= render 'books/newbook', booknew: @booknew %>
   </div>
 
-  <div class="col">
+  <div class="col col-md-8 offset-md-1">
   <!-- ユーザーの投稿一覧 -->
   <table class="table">
     <tr>
@@ -27,23 +34,18 @@
     </tr>
     <% @books.each do |book| %>
     <tr>
-      <td><%= image_tag @user.get_profile_image(80,80) %></td>
+      <td>
+
+        <%= link_to user_path(@user) do %>
+          <%= image_tag @user.get_profile_image(80,80) %>
+        <% end %>
+      </td>
       <td>
         <%= link_to book_path(book.id) do %>
           <%= book.title %>
         <% end %>
       </td>
       <td><%= book.body %></td>
-
-    <% if @user == current_user %>
-
-      <td>
-        <%= link_to "Edit", edit_book_path(@user.id), class:'btn btn-success' %>
-      </td>
-      <td>
-        <%= link_to "Destroy", book_path(@user.id), method: :delete, "data-confirm" => "本当に消しますか?",class: 'btn btn-danger' %>
-      </td>
-    <% end %>
 
     </tr>
     <% end %>
